# OpenInfraManager

./: README.md  config.py  pyproject.toml  run.py
app/: __init__.py  routes.py
tests/: test_images.py  test_servers.py
