[tool.poetry]
name = "openinfra-manager"
version = "0.1.0"
description = "API to manager infrastructure on OpenStack"
authors = ["Amine El amrani <amine_el_amrani@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "pytest"
